--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/output.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sora">
-        <title>Flanba · Home</title>
+        <title>NightArena · Home</title>
     </head>
     <body class="font-[Sora] bg-[#2C2F33]">
         <div>
