--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!-- mobile menu -->
                 <div class="mobile-menu hidden xl:hidden">
                     <a href="index.html" class="nav-sub-btn-mobile">Home</a>
-                    <a href="https://flanba.tebex.io" target="_blank" class="nav-main-btn-mobile">Store</a>
+                    <a href="https://nightarena.tebex.io" target="_blank" class="nav-main-btn-mobile">Store</a>
                 </div>
               </nav>
             </div>
@@ -87,6 +87,7 @@
                 <br>
             	<p class="text-left text-xl lg:text-2xl text-white font-light mx-[2rem] xl:mx-[10rem]"><strong>IP: </strong>nightarena.net</p>
                 <p class="text-left text-xl lg:text-2xl text-white font-light mx-[2rem] xl:mx-[10rem]"><strong>PORT: </strong>19132</p>
+                <br>
             </div>
         </div>
         <div class="bg-[#23272A] text-center py-[3rem]">
