--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body class="font-[Sora] bg-[#2C2F33]">
         <div>
             <div class="bg-[url('../assets/images/wallpaper.png')] bg-no-repeat bg-cover bg-scroll bg-center text-center py-[5rem]">
-                <img src="assets/images/wallpaper.png"  onclick=" window.location.href='index.html' " class="inline-block h-[8rem] xl:h-[12.5rem] drop-shadow-xl cursor-pointer logoAnimation">
+                <img src="assets/images/logo.png"  onclick=" window.location.href='index.html' " class="inline-block h-[8rem] xl:h-[12.5rem] drop-shadow-xl cursor-pointer logoAnimation">
             </div>
             <nav class="bg-[#23272A] py-[3rem] drop-shadow-2xl text-center">
                 <div class="mx-auto text-center px-4">
