--- a/index.html
+++ b/index.html
@@ -78,6 +78,27 @@
                 <br>
             </div>
         </div>
+
+              <!--New Block-->
+             <div class="blockAnimation mx-[1rem] xl:mx-[20rem] my-[5rem]">
+            <div class="bg-[#17191b] rounded-t-xl">
+                <h1 class="text-center text-4xl text-transparent bg-clip-text bg-gradient-to-br from-[#FF7800] to-[#FEB400] font-bold py-[2.5rem]">About Us</h1>
+            </div>
+            <div class="bg-[#23272A] rounded-b-xl">
+                <p class="text-left text-xl lg:text-2xl text-white font-light mx-[2rem] xl:mx-[10rem] pt-[2rem] xl:pt-[10rem]">NightArena Network</p>
+                <br>
+                <p class="text-left text-xl lg:text-2xl text-white font-light mx-[2rem] xl:mx-[10rem]">We are a Minecraft: Bedrock Edition server that mainly focuses on the PvP aspects of Minecraft.</p>
+                <br>
+                <p class="text-left text-xl lg:text-2xl text-white font-light mx-[2rem] xl:mx-[10rem]">If you are looking forward to improve your PvP skills, look no further. We offer various kinds of gamemodes for a player to practice, you will never get bored of it. We have gamemodes such as BuildUHC, Sumo, Boxing, BattleRush, MLGRush, TheBridge, a new never seen before gamemode, and many more you can check out yourself.</p>
+                <br>
+            	<p class="text-left text-xl lg:text-2xl text-white font-light mx-[2rem] xl:mx-[10rem]">Are you interested in joining us? If so, connect to our Minecraft server using:</p>
+                <br>
+            	<p class="text-left text-xl lg:text-2xl text-white font-light mx-[2rem] xl:mx-[10rem]"><strong>IP: </strong>nightarena.net</p>
+                <p class="text-left text-xl lg:text-2xl text-white font-light mx-[2rem] xl:mx-[10rem]"><strong>PORT: </strong>19132</p>
+                <br>
+            </div>
+        </div>
+
         <div class="bg-[#23272A] text-center py-[3rem]">
             <a href="https://docs.google.com/document/d/19xeHnFu2Ce0U3Usc8P9uACmEKApDh_oq8qF8joMBAew/edit?usp=sharing" class="text-[#619ac0] hover:underline inline-block text-2xl">Network Policies</a>
         </div>
